Fix null-safe batch window policy conflicts